/* Buton label for Edit action */
"action.generic.edit" = "Edit";

/* Button label for a generic show action */
"action.generic.show" = "Show";

/* Button label for Undo action */
"action.generic.undo" = "Undo";
...
"action.text-zoom-sheet-title" = "Text Zoom (%d%%)";

/* Add action - button shown in alert */
"action.title.add" = "Add";

/* Autofill Logins menu item opening the login list */
"action.title.autofill.logins" = "Passwords";

/* Confirmation of Add to Bookmarks action in Add All Open Tabs to Bookmarks alert */
"action.title.bookmark" = "Bookmark";

/* Button: Open bookmarks list */
"action.title.bookmarks" = "Bookmarks";

/* Cancel action - button shown in alert */
"action.title.cancel" = "Cancel";

/* Copy action */
"action.title.copy" = "Copy";

/* Floating message indicating URL has been copied */
"action.title.copy.message" = "URL copied";
...
"action.title.edit.bookmark" = "Edit Bookmark";

/* Enable protection action */
"action.title.enable.protection" = "Enable Privacy Protection";

/* No comment provided by engineer. */
"action.title.forgetAll" = "Close Tabs and Clear Data";

/* Confirmation message */
"action.title.forgetAllDone" = "Tabs and data cleared";

/* Open in New Background Tab action */
"action.title.newBackgroundTabForUrl" = "Open in Background";
...
"action.title.save.bookmark" = "Add Bookmark";

/* Add to Favorites action */
"action.title.save.favorite" = "Add Favorite";

/* Settings action */
"action.title.settings" = "Settings";

/* Share action */
"action.title.share" = "Share";

/* New tab menu item opening a new tab */
"action.title.tab.new" = "New Tab";
...
"address.bar.bottom" = "Bottom";

/* Settings label for top position for the address bar */
"address.bar.top" = "Top";

/* No comment provided by engineer. */
"addWidget.button" = "Add Widget";

/* No comment provided by engineer. */
"addWidget.description" = "Get quick access to private search and the sites you love.";

/* No comment provided by engineer. */
"addWidget.settings.firstParagraph" = "Long-press anywhere on the Home Screen until the apps jiggle";
...
"autofill.logins.details.address" = "Website URL";

/* Title for autofill login details */
"autofill.logins.details.default-title" = "Password";

/* Delete button when deleting an autofill login */
"autofill.logins.details.delete" = "Delete Password";

/* Autofill alert button confirming delete autofill login */
"autofill.logins.details.delete-confirmation.button" = "Delete Password";

/* Title when editing autofill login details */
"autofill.logins.details.edit-title" = "Edit Password";
...
"bookmark.folderSelect.title" = "Location";

/* More options button text */
"bookmark.moreButton" = "More";

/* Placeholder in the bookmarks search bar */
"bookmark.searchbar.placeholder" = "Search";

/* Placeholder in the add bookmark form */
"bookmark.title.placeholder" = "Website title";

/* Top level bookmarks folder title */
"bookmark.topLevelFolder.title" = "Bookmarks";
...
"data.import.passwords.title" = "Import Passwords to DuckDuckGo";

/* Data import summary of how many bookmarks were successfully imported. */
"data.import.summary.bookmarks.success" = "Bookmarks";

/* Title of button to dismiss the screen */
"data.import.summary.button.title.done" = "Done";

/* Title of button to prompt users to sync and back up their imported data. Reads as 'Sync & Back Up Passwords | Bookmarks | Data' depending on what the user has chosen to import */
"data.import.summary.button.title.sync" = "Sync & Back Up %@";

/* Parameter for autofill.import.passwords.complete.button.title.sync */
"data.import.summary.button.title.sync.bookmarks" = "Bookmarks";
...
"feedback.general.category.ppro" = "Subscription and Payments";

/* Prompt to select a category for general feedback */
"feedback.general.category.select" = "Select a category";

/* Category for VPN feedback */
"feedback.general.category.vpn" = "VPN";

/* Category for access code issues */
"feedback.itr.category.access-code" = "Issue with access code";

/* Category for issues contacting an advisor */
"feedback.itr.category.cant-contact-advisor" = "Unable to contact advisor";
...
"network.protection.invite.success.message" = "Hide your location from websites and conceal your online activity from Internet providers and others on your network.";

/* Title for the network protection invite success view */
"network.protection.invite.success.title" = "Success! You’re in.";

/* The title of the notifications shown from VPN */
"network.protection.notification.title" = "DuckDuckGo";

/* Title text for an iOS quick action that opens VPN settings */
"network.protection.quick-action.open-vpn" = "Open VPN";

/* Button title for tooltip about VPN snooze mode */
"network.protection.snooze.tip.action" = "Learn more";
...
"search.input.toggle.search.button.title" = "Search";

/* No comment provided by engineer. */
"section.title.bookmarks" = "Bookmarks";

/* No comment provided by engineer. */
"section.title.favorites" = "Favorites";

/* Name of the option the user can chose to give general browser feedback */
"send.browser.feedback.general-feedback" = "General feedback";

/* Name of the option the user can chose to give browser feedback about a problem they enountered */
"send.browser.feedback.report-problem" = "Report a problem";
...
"settings.learn.more" = "Learn More";

/* Switch button label. */
"settings.let.duckduckgo.manage.cookie.consent.popups" = "Let DuckDuckGo manage cookie consent pop-ups";

/* Settings screen cell text for passwords */
"settings.logins" = "Passwords & Autofill";

/* The name of the settings section containing main settings */
"settings.main.settings" = "Main Settings";

/* Label of a button managing email protection account */
"settings.manage.account" = "Manage Account";
...
"settings.subscription.VPN.title" = "VPN";

/* Label of a button navigating to the Support page */
"settings.support" = "Support";

/* Settings screen cell text for sync and backup */
"settings.sync" = "Sync & Backup";

/* Settings screen cell text for text size */
"settings.text.size" = "Default Text Zoom";

/* Settings screen cell text for theme */
"settings.theme" = "Theme";
...
"tab.select.all" = "Select All";

/* Deselect all tabs */
"tab.select.none" = "Deselect All";

/* Tab Switcher Accessibility Label */
"tab.switcher.accessibility.label" = "Tab Switcher";

/* Bookmark all tabs menu item */
"tab.switcher.bookmarkAll" = "Bookmark All Tabs";

/* Description text for the text size adjustment setting */
"textSize.description" = "Increase or decrease text size across all sites.";
...
