...
"lock.screen.widget.fire.title" = "Fire Button";

/* Description shown to the user when adding the Search Passwords lock screen widget */
"lock.screen.widget.passwords.description" = "Quickly search your saved DuckDuckGo passwords.";

/* Title shown to the user when adding the Search Passwords lock screen widget */
"lock.screen.widget.passwords.title" = "Search Passwords";

/* Description shown to the user when adding the Search lock screen widget */
"lock.screen.widget.search.description" = "Instantly start a private search in DuckDuckGo.";

/* Title shown to the user when adding the Search lock screen widget */
"lock.screen.widget.search.title" = "Private Search";
...
"widget.gallery.quickactions.medium.display.name" = "Shortcuts";

/* Description of search and favorites widget in widget gallery */
"widget.gallery.search.and.favorites.description" = "Search or visit your favorite sites privately with just one tap.";

/* Display name for search and favorites widget in widget gallery */
"widget.gallery.search.and.favorites.display.name" = "Search and Favorites";

/* Description of search only widget in widget gallery */
"widget.gallery.search.description" = "Quickly launch a private search in DuckDuckGo.";

/* Display name for search only widget in widget gallery */
"widget.gallery.search.display.name" = "Search";
...
