...
                        Image(uiImage: DesignSystemImages.Glyphs.Size24.close)
                            .foregroundColor(.primary)
                    }
                    .frame(width: 44, height: 44)
                    .contentShape(Rectangle())
                    .padding(0)
                    .accessibilityIdentifier("Button_DismissImportPromo")
                }
            }
            .alignmentGuide(.top) { dimension in
                dimension[.top]
            }
        }
...
