...
"turn.sync.off.section.header" = "Sync Enabled";

/* Options - Unify Favorites Instruction */
"unified.favorites.instruction" = "Use the same favorite bookmarks on all your devices. Leave off to keep mobile and desktop favorites separate.";

/* Options - Unify Favorites Title */
"unified.favorites.title" = "Unify Favorites Across Devices";

/* View Text Code menu item */
"view.text.code.menu.item" = "View Text Code";


