...
                        .foregroundColor(.primary)
                        .accessibility(label: Text(UserText.unifiedFavoritesTitle))
                        .accessibility(addTraits: .isStaticText)
                    Text(UserText.unifiedFavoritesInstruction)
                        .daxFootnoteRegular()
                        .foregroundColor(.secondary)
                        .accessibility(identifier: "UnifiedFavoritesToggle")
                }
            }
        } header: {
            Text(UserText.optionsSectionHeader)
        }
        .onAppear(perform: {
...
