appId: com.duckduckgo.mobile.ios
---

- scrollUntilVisible:
    element: Sync & Backup
- tapOn: Sync & Backup
- scroll
- assertVisible: Unify Favorites Across Devices
- runFlow: # TODO: Remove this! This was added to validate an hypothesis about some flacky tests. If this test doesn't fail anymore, we need to investigate why the toggle is already enabled when the test starts.
    when:
      visible: # Check that UnifiedFavoritesToggle is off
        text: "0" 
        index: 1 
    commands:
        - tapOn:
            rightOf: 
              id: "UnifiedFavoritesToggle"
- tapOn: Settings
- tapOn: Done
- tapOn: Bookmarks
- tapOn: Favorites
- assertVisible: NFL.com | Official Site of the National Football League
- assertVisible: DuckDuckGo · GitHub
- assertVisible: Stack Overflow - Where Developers Learn, Share, & Build Careers
- tapOn: Done