appId: com.duckduckgo.mobile.ios
tags:
    - iphone
    - sync
name: 04_sync_data_setup

---

# Set up 
- runFlow: 
    file: ../shared/setup.yaml

# Add local favorite and bookmark
- runFlow:
    file: ../shared/add_bookmarks_and_favorites.yaml
- tapOn: Close Tabs and Clear Data
- tapOn: Close Tabs and Clear Data

# Add local login
- runFlow:
    when:
      visible:
        text: "Cancel"
    commands:
      - tapOn: Cancel
- tapOn: Browsing menu
- tapOn: Settings
- runFlow:
    file: ../shared/add_login_from_settings.yaml

#  Copy Recovery Code
- tapOn: Browsing menu
- tapOn: Settings
- runFlow:
    file: ../shared/copy_recovery_code_from_settings.yaml
    env:
        CODE: ${CODE}

# Set Internal User
- runFlow:
    file: ../shared/set_internal_user_from_settings.yaml

    # Set Dev environment
- runFlow:
    file: ../shared/set_sync_dev_environment.yaml

# Login
- assertVisible: Sync & Backup
- tapOn: Sync & Backup
- runFlow:
    file: ../shared/sync_login.yaml
- assertVisible: Sync & Backup

# Log Out
- runFlow:
    file: ../shared/sync_logout.yaml
- tapOn: Settings
- tapOn: Done

# Remove bookmarks that were added locally
- runFlow:
    file: ../shared/remove_local_bookmarks.yaml

# Remove Login that were added locally
- runFlow:
    file: ../shared/remove_local_logins.yaml

# Maestro seems to get stuck without an additional step here
- assertVisible: 
    id: searchEntry
