appId: com.duckduckgo.mobile.ios
tags:
    - iphone
    - sync
name: 05_sync_data_check

---
# IMPORTANT: This test is strictly related to 04_sync_data_setup
#            and it will fail if 04 is not executed before. 
#            The test is split in two different flow to accomodate 
#            for Maestro CI max execution time. 

# Set up 
- runFlow: 
    file: ../shared/setup.yaml

#  Copy Recovery Code
- tapOn: Browsing menu
- tapOn: Settings
- runFlow:
    file: ../shared/copy_recovery_code_from_settings.yaml
    env:
        CODE: ${CODE}

# Set Internal User
- runFlow:
    file: ../shared/set_internal_user_from_settings.yaml

    # Set Dev environment
- runFlow:
    file: ../shared/set_sync_dev_environment.yaml

# Login
- assertVisible: Sync & Backup
- tapOn: Sync & Backup
- runFlow:
    file: ../shared/sync_login.yaml
- assertVisible: Sync & Backup

# Verify bookmarks have been merged
- tapOn: Settings
- runFlow:
    file: ../shared/sync_verify_bookmarks.yaml

# Verify favorites are unified
- tapOn: Done
- tapOn: Browsing menu
- tapOn: Settings
- runFlow:
    file: ../shared/sync_verify_unified_favorites.yaml

# Verify logins
- tapOn: Browsing menu
- tapOn: Settings
- runFlow:
    file: ../shared/sync_verify_logins.yaml

